# TaskManager_Django

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yml
locale/ru_RU/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  utils.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author_alter_task_description_and_more.py
task_manager/templates/: 404.html  base.html  delete.html  footer.html  form.html  index.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  delete.html  task.html  tasks.html  update.html
task_manager/templates/users/: create.html  users.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
