[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Spike2250 <shilov.spike2250@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
dj-database-url = "^2.1.0"
python-dotenv = "^1.0.1"
django-filter = "^24.2"
rollbar = "^0.16.3"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
flake8 = "^7.0.0"
pytest-django = "^4.8.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
